# games

./: .gitignore  Cargo.toml  Readme.md  buildAll.sh  index.html
.github/workflows/: pages.yml
basketball/: Cargo.toml  basketball.js  index.html
basketball/src/: main.rs
convay/: Cargo.toml  convay.js  index.html  styles.css
convay/assets/: sw.js
convay/src/: main.rs
public/: index.html  styles.css
snake/: Cargo.toml  index.html  snake.js
snake/shapes/: heart.txt
snake/src/: main.rs
